--- a/xuxxa.html
+++ b/xuxxa.html
@@ -1,5 +1,14 @@
 <html>
   <head>
+    
+      <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@DayofKnowledge">
+  <meta name="twitter:title" content="The day of knowledge">
+  <meta name="twitter:description" content="The Day of Knowledge México es un día de sabiduría, ofrece la posibilidad de reunirte con profesores excepcionales de las mejores Universidades del mundo"><!-- El texto de descripcion no debe rebasar los 200 caracteres-->
+  <meta name="twitter:creator" content="@DayofKnowledge">
+  <!--RESOLUCION MINIMA 280x150px -->
+  <meta name="twitter:image:src" content="https://thedayofknowledge.com/shared/img/logo-DOK-negro2.png">
   </head>
   <body>
     la chucha
